Fixed issue where button wraps when screen size gets too small. Also upped tha padding for body-top on certain screen sizes.

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ a:hover {
 }
 p {
   white-space: pre-line;
+  margin-top: 1em;
 }
 .nav-icon {
     max-width: 24px;
@@ -101,6 +102,7 @@ p {
     color: mintcream;
     font-size: 1.25em;
     text-decoration: none;
+    white-space: nowrap;
 }
 .button-link:hover {
     background-color: lavender;
@@ -152,6 +154,14 @@ p {
   width: 100%;
   z-index: 1000;
 }
+@media (max-width: 600px) {
+  .button-link {
+    font-size: 1em;
+    padding: 0.5em 1em;
+    width: 100%;
+    text-align: center;
+  }
+}
 @media only screen and (max-width: 400px) {
     .nav-pages {
         display: flex;
@@ -159,7 +169,7 @@ p {
         flex-wrap: wrap
     }
     body {
-        padding-top: 135px;
+        padding-top: 150px;
     }
 }
 @media only screen and (max-width: 268px) {
